# basyx-rust-sdk

./: Cargo.toml  README.md
schema/: aas.json  aas.json.license
src/: data_object_type_name.rs  key.rs
tests/: cli.rs  environment_serde.rs  invalid.json
