# SPDX-FileCopyrightText: 2021 Fraunhofer Institute for Experimental Software Engineering IESE
# SPDX-FileCopyrightText: 2023 Jan Hecht
#
# SPDX-License-Identifier: MIT

[package]
name = "basyx-rs"
version = "0.2.1"
authors = [
    "Daniel Hillen <daniel.hillen@iese.fraunhofer.de>",
    "Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>",
    "Jan Hecht <jan.hecht@jh-isw.de"
]
description = "A Rust library to work with Asset Administration Shells."
edition = "2021"
rust-version = "1.69.0"
homepage = "https://github.com/eclipse-basyx/rust-sdk"
documentation = "https://docs.rs/basyx-rs/"
readme = "README.md"
keywords = ["aas", "basyx", "serde"]
license = "MIT"
repository = "https://github.com/eclipse-basyx/rust-sdk"

[[bin]]
name = "aascheck"
path = "src/bin/aascheck.rs"
test = false
bench = false

[dependencies]
clap = { version = "3.2.25", features = ["derive"], optional = true }
color-eyre = { version = "0.6.2", default-features = false }
colored = "2.0.0"
jsonschema = { version = "=0.17.1", default-features = false, features = ["draft201909"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.50"
strum = "0.25.0"
strum_macros = "0.25.3"
regex = "1.10.2"

[features]
default = ["clap"]
explorer = []
