# SPDX-FileCopyrightText: 2021 Fraunhofer Institute for Experimental Software Engineering IESE
# SPDX-FileCopyrightText: 2023 Jan Hecht
#
# SPDX-License-Identifier: MIT

[package]
name = "basyx-rs"
version = "0.2.1"
authors = [
    "Daniel Hillen <daniel.hillen@iese.fraunhofer.de>",
    "Andreas Schmidt <andreas.schmidt@iese.fraunhofer.de>",
    "Jan Hecht <jan.hecht@jh-isw.de"
]
description = "A Rust library to work with Asset Administration Shells."
edition = "2021"
rust-version = "1.69.0"
homepage = "https://github.com/eclipse-basyx/rust-sdk"
documentation = "https://docs.rs/basyx-rs/"
readme = "README.md"
keywords = ["aas", "basyx", "serde"]
license = "MIT"
repository = "https://github.com/eclipse-basyx/rust-sdk"

[[bin]]
name = "aascheck"
path = "src/bin/aascheck.rs"
test = false
bench = false

[dependencies]
clap = { version = "3.0.0-beta.5", optional = true }
color-eyre = { version = "0.6.3", default-features = false }
colored = "3.0.0"
jsonschema = { version = "=0.30.0", default-features = false}
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "2.0.12"
strum = "0.24.1"
strum_macros = "0.24.3"
regex = "1.8.1"

[features]
default = ["clap"]
explorer = []

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
